# dtt

./: .dockerignore  .gitignore  README.md  compose.yaml  env.sh  pyproject.toml  slurmify_0.1.0_amd64.deb
configs/: config.yaml  path_templates.yaml
configs/project_datasets/: wiki.yaml
docker/master/: Dockerfile
docker/worker/: Dockerfile
dtt/: __init__.py  main.py
dtt/commands/: download.py  tokenize.py  train.py
dtt/core/: __init__.py  loops.py  model.py
dtt/utils/: __init__.py  config.py  profile.py
dtt/utils/model/: dataloading.py
dtt/utils/train/: __init__.py  dataloading.py  profile.py
dtt/utils/train/lr_schedulers/: __init__.py  constant.py  exponential.py  onecycle.py
dtt/utils/train/optimizers/: __init__.py  adam.py  adamw.py  sgd.py
sbatch/: download.sh  tokenize.sh  train.sh
