[project]
name = "dtt"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "wandb==0.18.3",
    "torch==2.5.1",
    "bpekit @ https://github.com/jamie-stephenson/bpekit/releases/download/v0.1.0-test/bpekit-0.1.0-cp310-abi3-linux_x86_64.whl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "platform_system != 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "tensorboard>=2.18.0",
    "torch-tb-profiler>=0.4.3",
]

[project.scripts]
dtt = "dtt.main:app"
