[project]
name = "dtt"
version = "0.1.0"
description = "Transformer-based languange model pretraining."
requires-python = ">=3.10"

dependencies = [
    "bpekit @ https://github.com/jamie-stephenson/bpekit/releases/download/v0.1.0-test/bpekit-0.1.0-cp310-abi3-linux_x86_64.whl",
    "wandb==0.18.3",
]

[project.optional-dependencies]
cpu = [
    "torch",
]
gpu = [
    "torch",
]

[dependency-groups]
dev = [
    "tensorboard>=2.18.0",
    "torch-tb-profiler>=0.4.3",
]

[project.scripts]
dtt = "dtt.main:app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true


[tool.uv.sources]
torch = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "torch-gpu", extra = "gpu" },
]


[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

